--- a/2022_DAIE_GCA_JOR_MG.Rmd
+++ b/2022_DAIE_GCA_JOR_MG.Rmd
@@ -50,10 +50,49 @@ summary of the contents
 # Introduction
 
 ## Topic and Context
+
+Observer-Rated and Self-Report methods of measuring patient PTSD/anxiety levels were used to assess patient PTSD levels across three groups of fifty patients. Each group has an equal numbers of Male and Female participant, twenty-five each. 
+
+The age range for this hypothetical situation doesn't matter as it hasn't been recorded, but I suppose if this was a real world situation there might be some ethical issues, but it's not sure it's all made up as far as I know. 
+
+I suppose the real lesson in any college assignment is how much unnecessary information we can filter through, as a student, before you stop caring because life's too short.
+
+There was a 12 week interval between the pre and post trial measurements, or the trial start and end. The types of groups really don't matter, they are just variable names for me. They might as well be x, y and z. What the study is about doesn't matter either, they'll make more readable labels for graphs later. All the waffle about PTSD kind of takes away from the fact this is basically just a numbers and graphs exercise, so I'm not wasting my time rehashing the stuff from the CA spec.
+
+**Groups:**
+
+* Control (No VR)
+* Static (Non-Animated VR)
+* Animated (Animated VR)
+
+**Gender: (Data Limited)**
+
+* Male
+* Female
+
+**Measurements:**
+
+* Self-Report:
+    + Start PTSD Level (pre_trial_cpss)
+    + End PTSD Level (post_trial_cpss)
+* Observer-Rated:
+    + Start PTSD Level (pre_trial_or)
+    + End PTSD Level (post_trial_or)
+
+
 ## Rationale
+
+Kind of simple. We only have a small amount of information, the change in PTSD Levels after 12 weeks, with one possible variable gender that may influence the outcome. Using 3 different treatment methods, with 2 different ratings. 
+
+So, we would expect there is either some change, or no change after 12 weeks. Each of the methods may have different outcomes, and the gender of the patients may be a factor in how they respond to each treatment, or to treatment in general by any of the 3 treatments.
+
 ## Hypothesis
 
+Average PTSD levels for both observer rated and self-reported should improve over a 12 week period.
 
+H0 (Null hypothesis): 
+
+H1 (Alternative): 
 
 # Method
 
@@ -182,6 +221,9 @@ Generalise sample statistic to population
 - mean response in population is x
 - believe with % certainty
 
+Histograms
+Scatter Plots
+
 ## Statistical Tests
 ## Magnitude and Direction of Results
 
@@ -219,6 +261,12 @@ R Programming 101 (YouTube). 2022. Clean your data with R. R programming for beg
 **T Test**
 
 R Programming 101 (YouTube). 2022. Doing a t-test using R programming (in 4 minutes) - YouTube. [ONLINE] Available at: https://www.youtube.com/watch?v=x1RFWHV2VUU. [Accessed 23 December 2022].
+
+
+**Markdown**
+
+Markdown Basics. 2022. Markdown Basics. [ONLINE] Available at: https://rmarkdown.rstudio.com/authoring_basics.html. [Accessed 23 December 2022].
+
 
 # Misc
 
