--- a/2022_DAIE_GCA_JOR_MG.Rmd
+++ b/2022_DAIE_GCA_JOR_MG.Rmd
@@ -86,7 +86,7 @@ There was a 12 week interval between the pre and post trial measurements, or the
 
 ## Rationale
 MG:
-While CBT is effective in the management of symptoms of PTSD, it doesn't specifically deal with the underlying cause. Furthermore, not all patients respond to CBT. Therefore, in an effort to improve the outcomes for patients with PTSD we aim to explore the effectiveness of virtual reality assisted cognitive behavioural therapy compared to standard CBT practices.
+While CBT is effective in the management of symptoms of PTSD, it doesn't specifically deal with the underlying cause. Furthermore, not all patients respond to CBT. Therefore, in an effort to improve the outcomes for patients with PTSD we aim to explore the effectiveness of virtual reality assisted cognitive behavioral therapy compared to standard CBT practices.
 
 JOR:
 Kind of simple. We only have a small amount of information, the change in PTSD Levels after 12 weeks, with one possible variable gender that may influence the outcome. Using 3 different treatment methods, with 2 different ratings. 
@@ -96,6 +96,7 @@ So, we would expect there is either some change, or no change after 12 weeks. Ea
 ## Hypothesis
 MG:
 Null hypothesis (H0): there is no difference in terms of CPSS scores betweeen the animated group and control group, or the static group and the control group
+
 Alternative hypothesis (H1): there is a significant difference in terms of CPSS scores between the animated group and control group, or the static group and the control group
 
 JOR:
@@ -112,8 +113,11 @@ The participants involved in the study were all young adults with PTSD in the ag
 
 ## Design
 The patients were allocated into one of three groups; 
+  
   - Control, static (traditional CBT, no VR)
+  
   - Static (non-animated model content, VR) 
+  
   - Animated (animated model content, VR)
 
 Non-animated means the objects in the virtual environment would be still and not interact.
